Fixed copyright spacing

--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ div#timeline {
 div#copyright {
 	position:fixed;
 	bottom:3px;
-	height:4%;
+	height:5%;
 	width:100%;
 	text-align: center;
 	color: #FFFFFF;
